--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,6 @@
 {
   "version": 1,
   "locale": "en_US",
-  "platform": "3.6.3",
   "metadata": {
     "appmode": "shiny",
     "primary_rmd": null,
@@ -10,16 +9,10 @@
     "has_parameters": false
   },
   "packages": {
-    "shiny": "1.6.0",
-    "tidyverse": "1.3.1",
-    "ggplot2": "3.3.5",
-    "dplyr": "1.0.7",
-    "openxlsx": "4.2.5"
+    "shiny": ">=1.5.0"
   },
   "files": [
-    "app.R",
-    "R/functions.R",
-    "www/wp_logo1.png"
+    "app.R"
   ],
   "users": null
 }
